--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             color: #333;
         }
         header {
-            background: #333;
+            background: #1f51ff; /* Neon blue color */
             color: #fff;
             padding: 10px 20px;
             text-align: center;
