--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #4f4dff;
+            background-color: #ff1818;
             color: #333;
         }
         header {
@@ -18,17 +18,21 @@
             color: #fff;
             padding: 10px 20px;
             text-align: center;
+            border: 3px solid #fff; /* White border */
         }
         main {
             padding: 20px;
             max-width: 800px;
-            margin: 0 auto;
+            margin: 20px auto;
+            border: 2px dashed #333; /* Dashed dark gray border */
+            background: #fff; /* Add a white background for contrast */
         }
         footer {
             text-align: center;
             padding: 10px;
             background: #333;
             color: #fff;
+            border-top: 4px solid #1f51ff; /* Neon blue top border */
         }
     </style>
 </head>
