--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #ff1818;
+            background-color: #e6a8ce;
             color: #333;
         }
         header {
