--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
+    <title></title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,11 +14,11 @@
             color: #333;
         }
         header {
-            background: #1f51ff; /* Neon blue color */
+            background: #; /* Neon blue color */
             color: #fff;
             padding: 10px 20px;
             text-align: center;
-            border: 3px solid #fff; /* White border */
+            border: 10px solid #ff1818; 
         }
         main {
             padding: 20px;
