--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         footer {
             text-align: center;
             padding: 10px;
-            background: #333;
+            background: #FF46A2;
             color: #fff;
             border-top: 4px solid #1f51ff; /* Neon blue top border */
         }
@@ -38,7 +38,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My GitHub Pages Site</h1>
+        <h1>HAPPY 5 MONTHS BABY</h1>
     </header>
     <main>
         <p>Hello! This is a simple website hosted using GitHub Pages.</p>
