--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         header {
             background: #; /* Neon blue color */
-            color: #fff;
+            color: #FF46A2;
             padding: 10px 20px;
             text-align: center;
             border: 10px solid #ff1818; 
