--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         header {
             background: #; /* Neon blue color */
-            color: #FF46A2;
+            color: #000;
             padding: 10px 20px;
             text-align: center;
             border: 10px solid #ff1818; 
@@ -38,7 +38,7 @@
 </head>
 <body>
     <header>
-        <h1>HAPPY 5 MONTHS BABY</h1>
+        <h5>HAPPY 5 MONTHS BABY</h5>
     </header>
     <main>
         <p>Hello! This is a simple website hosted using GitHub Pages.</p>
