--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
             color: #fff;
             border-top: 4px solid #1f51ff; /* Neon blue top border */
         }
+        header h1 {
+            font-size: 2em; /* Adjust the size as needed */}
     </style>
 </head>
 <body>
     <header>
-        <h5>HAPPY 5 MONTHS BABY</h5>
+        <h1>HAPPY 5 MONTHS BABY</h1>
     </header>
     <main>
         <p>Hello! This is a simple website hosted using GitHub Pages.</p>
