--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Password Protected Page</title>
+    <title>You found it</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,18 +14,18 @@
             color: #333;
         }
         header {
-            background: #; /* Neon blue color */
+            background: #ff46a2; /* Neon blue color */
             color: #000;
             padding: 10px 20px;
             text-align: center;
-            border: 10px solid #FF46A2; 
+            ; 
         }
         main {
             padding: 20px;
             max-width: 800px;
             margin: 20px auto;
-            border: 2px dashed #333; /* Dashed dark gray border */
-            background: #fff; /* Add a white background for contrast */
+            border: 4px solid #000;
+            background: #FF46A2; 
             text-align: center;
         }
         footer {
@@ -33,10 +33,10 @@
             padding: 10px;
             background: #FF46A2;
             color: #fff;
-            border-top: 4px solid #ff1818; /* Neon blue top border */
+            border-top: 4px solid #ff1818;
         }
         header h1 {
-            font-size: 2em; /* Adjust the size as needed */
+            font-size: 2em;
         }
         .password-box {
             margin: 20px 0;
@@ -51,6 +51,10 @@
             font-size: 1.2em;
             color: #333;
         }
+        .question {
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
     </style>
 </head>
 <body>
@@ -58,39 +62,44 @@
         <h1>HAPPY 5 MONTHS BABY</h1>
     </header>
     <main>
-        <p>Please enter the password to see each special message:</p>
+        <p>Enter the answer to see the next clue:</p>
         
         <!-- Password Box 1 -->
         <div class="password-box">
-            <input type="password" id="password1" placeholder="Enter password 1">
+            <p class="question">1. What do we both love?</p>
+            <input type="password" id="password1" placeholder="Enter answer">
             <button onclick="checkPassword(1)">Submit</button>
             <div id="output1" class="output"></div>
         </div>
 
         <!-- Password Box 2 -->
         <div class="password-box">
-            <input type="password" id="password2" placeholder="Enter password 2">
+            <p class="question">2. What are you scared of the most?</p>
+            <input type="password" id="password2" placeholder="Enter answer">
             <button onclick="checkPassword(2)">Submit</button>
             <div id="output2" class="output"></div>
         </div>
 
         <!-- Password Box 3 -->
         <div class="password-box">
-            <input type="password" id="password3" placeholder="Enter password 3">
+            <p class="question">3. What date have we met on 2 major events?</p>
+            <input type="password" id="password3" placeholder="Enter answer">
             <button onclick="checkPassword(3)">Submit</button>
             <div id="output3" class="output"></div>
         </div>
 
         <!-- Password Box 4 -->
         <div class="password-box">
-            <input type="password" id="password4" placeholder="Enter password 4">
+            <p class="question">4. What was the first car you got me?</p>
+            <input type="password" id="password4" placeholder="Enter answer">
             <button onclick="checkPassword(4)">Submit</button>
             <div id="output4" class="output"></div>
         </div>
 
         <!-- Password Box 5 -->
         <div class="password-box">
-            <input type="password" id="password5" placeholder="Enter password 5">
+            <p class="question">5. What rhymes with the last alphabet and would also be what a guy who likes you will be?</p>
+            <input type="password" id="password5" placeholder="Enter answer">
             <button onclick="checkPassword(5)">Submit</button>
             <div id="output5" class="output"></div>
         </div>
@@ -101,11 +110,11 @@
 
     <script>
         const passwordManager = {
-            1: { password: "love123", message: "🎉 Message 1: You're the best! 💖" },
-            2: { password: "sweetheart", message: "🎉 Message 2: I adore you! 🌹" },
-            3: { password: "forever", message: "🎉 Message 3: Forever and always. 💞" },
-            4: { password: "happiness", message: "🎉 Message 4: You bring me joy! ✨" },
-            5: { password: "special", message: "🎉 Message 5: You're my everything! 🥰" }
+            1: { password: "chicken", message: " W " },
+            2: { password: "dogs", message: " H " },
+            3: { password: "26", message: " A " },
+            4: { password: "tesla", message: " T " },
+            5: { password: "dead", message: " ? " }
         };
 
         function checkPassword(boxNumber) {
